adjust text width on mobile to prevent overflow

--- a/staticfiles/css/blog.css
+++ b/staticfiles/css/blog.css
@@ -123,10 +123,10 @@ img {max-width:100%;}
 	.flex-text{
 		
 		flex-basis: auto;
-		max-width: 95%;
+		max-width: 90%;
 	}
 
-	p { word-break: break-all }
+	
 
 	
 }
